--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 
     <script src="index.js" defer></script>
 </head>
-<body style="display: flex; justify-content: center;">
-    <img src="plot.png" alt="" hidden id="main_image">
-    <canvas id="main_canvas" width="1000" height="500" style="border: red solid 2px;"></canvas>
+<body>
+    <div style="display: flex; justify-content: center;">
+        <img src="plot.png" alt="" hidden id="main_image">
+        <canvas id="main_canvas" width="1000" height="500" style="border: red solid 2px;"></canvas>
+        <div id="graph"></div>
+        </div>
 </body>
 </html>
